# weather-data-analyzer-rustsalvo-api

./: Cargo.toml  README.md
src/: main.rs  services.rs
src/models/: weather.rs
src/services/: weather_api_service.rs
