[package]
name = "weather-data-analyzer-rustsalvo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = {version ="0.11.24", features = ["json"]}
salvo = "0.65.2"
serde = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
